k8s/canary/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod-ns
  name: wisland-feed-prod-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisland-feed-prod-canary
      version: v2
  template:
    metadata:
      labels:
        app: wisland-feed-prod-canary
        version: v2
    spec:
      imagePullSecrets:
        - name: registry-ali-hangzhou
      containers:
        - name: wisland-feed-prod-canary-server
          image: crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag/wisland-feed-prod:server-20250920142148
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3500
              protocol: TCP
          resources:
            limits:
              cpu: '0.5'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 3500
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 3500
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
        - name: wisland-feed-prod-canary-worker
          image: crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag/wisland-feed-prod:worker-20250920142148
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: '0.5'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 100Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 120
